feat: adiciona configuração do Flyway e scripts de migração iniciais

--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,15 @@
-flyway.driver=org.postgresql.Driver
-flyway.url="${env.DB_URL}"
-flyway.user="${env.DB_USER}"
-flyway.password="${env.DB_PASSWORD}"
+flyway.driver=org.postgresql.Driver      # Driver do PostgreSQL
+flyway.url="${env.DB_URL}"               # URL do banco de dados
+flyway.user="${env.DB_USER}"             # usuário do banco de dados
+flyway.password="${env.DB_PASSWORD}"     # senha do banco de dados
+
+# Flyway Configuration
+spring.flyway.enabled=true                      # Ativa o Flyway
+spring.flyway.locations=classpath:db/migration  # Localização dos scripts de migração
+spring.flyway.baseline-on-migrate=true          # Cria uma baseline se o banco já existir
+spring.flyway.validate-on-migrate=true          # Valida migrações antes de aplicar novas
+spring.flyway.clean-disabled=true               # Desativa o comando clean
+spring.flyway.out-of-order=false                # Não permite migrações fora de ordem
+
+# Para desenvolvimento (cuidado em produção)
+spring.flyway.clean-on-validation-error=false   # Não limpa o banco em caso de erro de validação
