--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,30 @@
 spring:
+  # Carregar variáveis de ambiente de um arquivo .env
   config:
     import: optional:file:.env[.properties]
+
+  # Configurações do banco de dados
   datasource:
     url: "${DB_URL}"
     username: "${DB_USER}"
     password: "${DB_PASSWORD}"
     driver-class-name: org.postgresql.Driver
+
+  # Configurações do JPA e Hibernate, incluindo timezone
+  jpa:
+    hibernate:
+      ddl-auto: validate # Valida se as @Entity's batem com o schema do Flyway
+      show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        jdbc:
+          time_zone: America/Sao_Paulo
   flyway:
     enabled: true
+    locations: classpath:db/migration
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
